--- a/config.json
+++ b/config.json
@@ -63,7 +63,12 @@
 		"files"     : [ "script/xml.js", "test.ui" ],
 		"source" : "source",
 		"target"  : "build"
-	}
+	},
+
+        "variants" : 
+        { 
+                "qx.dynlocale" : ["on"] 
+        } 
     },
 
     "source":
@@ -73,7 +78,12 @@
 		{
 			"uri" : "script/xml.js"
 		}
-	]
+	],
+
+        "variants" : 
+        { 
+                "qx.dynlocale" : ["on"] 
+        } 
     }
 
     // Uncomment the following entry to add a contrib or library to your
