Added image widget

--- a/config.json
+++ b/config.json
@@ -41,7 +41,7 @@
     "QXTHEME"      : "cute.theme.Theme",
     "API_EXCLUDE"  : ["qx.test.*", "${APPLICATION}.theme.*", "${APPLICATION}.test.*", "${APPLICATION}.simulation.*"],
     "LOCALES"      : [ "en", "de" ],
-    "CACHE"        : "${TMPDIR}/qx${QOOXDOO_VERSION}/cache",
+    "CACHE"        : "${ROOT}/cache/qx${QOOXDOO_VERSION}",
     "ROOT"         : "."
   },
 
@@ -84,23 +84,21 @@
         { 
                 "qx.dynlocale" : ["on"] 
         } 
-    }
+    },
 
     // Uncomment the following entry to add a contrib or library to your
     // project; make sure to adapt the path to the Manifest.json; if you are
     // using a contrib: library, it will be downloaded into the path specified
     // by the 'cache/downloads' config key
-    /*
     "libraries" : 
     {
       "library" :
       [
         {
-          "manifest" : "contrib://SkeletonApplication/trunk/Manifest.json"
+          "manifest" : "contrib://UploadMgr/trunk/Manifest.json"
         }
       ]
     }
-    */
 
     // If you want to tweak a job setting, see the following sample where
     // the "format" feature of the "build-script" job is overridden.
