--- a/template/index.html.in
+++ b/template/index.html.in
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script language='JavaScript' src='./resource/cute/js/throbber.js'></script>
+  <script language='JavaScript' src='./resource/cute/js/utils.js'></script>
   <title>GOsa</title>
 
   <!-- Detect engine, detect languguage and load engine optimized ICE -->
@@ -25,7 +26,7 @@
       variant = "mshtml";
     }
     else if (/Opera[\/\s](\d+\.\d+)/.test(navigator.userAgent)){
-        variant = "opera";
+      variant = "opera";
     }
 
     // Redirect to browser hint, if we cannot find a matching variant or platform
@@ -58,16 +59,8 @@
         <div id="throbber" />
       </center>
       <script type="text/javascript">
-
-        var throb = new Throbber({
-          color: "black",
-          size: 32,
-          fade: 1000,
-          rotationspeed: 0,
-          lines: 14,
-          strokewidth: 1.8,
-          alpha: 0.4});
-        throb.appendTo( document.getElementById( 'throbber' ) );
+        var throb = getThrobber();
+        throb.appendTo(document.getElementById('throbber'));
         throb.start();
       </script>
     </div>
