Added destructor for inherited classes

--- a/config.json
+++ b/config.json
@@ -65,6 +65,7 @@
       "environment" :
       {
         "qx.debug.dispose.level" : "2",
+        "qx.debug.dispose" : true,
         "qx.widgetDebugId" : true
       }
     },
