Updated listener for appear in MultiEditWidget

--- a/config.json
+++ b/config.json
@@ -64,9 +64,8 @@
 
       "environment" :
       {
-        "qx.debug.dispose.level" : "2",
-        "qx.debug.dispose" : true,
-        "qx.widgetDebugId" : true
+        "qx.debug.dispose" : "true",
+        "qx.debug.dispose.level" : "2"
       }
     },
 
