--- a/template/index.html.in
+++ b/template/index.html.in
@@ -6,10 +6,8 @@
   <script language='JavaScript' src='./resource/cute/js/utils.js'></script>
   <title>GOsa</title>
 
-  <!-- Detect engine, detect languguage and load engine optimized ICE -->
+  <!-- Detect engine -->
   <script type="text/javascript">
-    var ge = null;
-    var google = null;
     var variant = null;
 
     // Get browser variant
@@ -34,9 +32,6 @@
     {
       window.location= "resource/cute/browser.html";
     }
-
-    // Find locale
-    var locale = (variant == "mshtml" ? navigator.userLanguage : navigator.language).toLowerCase();
 
     // Load matching GOsa according to variant
     var script = document.createElement("script");
