--- a/template/index.html.in
+++ b/template/index.html.in
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="apple-mobile-web-app-capable" content="yes" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script language='JavaScript' src='./resource/cute/js/throbber.js'></script>
   <script language='JavaScript' src='./resource/cute/js/utils.js'></script>
   <title>GOsa</title>
