--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "modules/capture"]
 	path = modules/capture
-	url = git://github.com/cajus/capture.git
+	url = git@github.com/cajus/capture.git
