use pytest as test runner and added the first test

--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -3,22 +3,8 @@ tag_build = dev
 tag_date = false
 tag_svn_revision = false
 
-[nosetests]
-verbose = 0
-detailed-errors = 1
-with-xunit = 1
-where = src
-with-nosexunit = 1
-source-folder = src
-core-target = reports/tests
-enable-cover = 1
-enable-audit = 1
-audit-output = text
-audit-target = reports/audit
-audit-config = audit.cfg
-cover-target = reports/cobertura
-cover-clean = 1
-cover-collect = 1
+[aliases]
+test=pytest
 
 [extract_messages]
 output_file = src/clacks/agent/locale/messages.pot
