add coverage support for testing

--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -6,6 +6,16 @@ tag_svn_revision = false
 [aliases]
 test=pytest
 
+[coverage:run]
+omit =
+    */.eggs/*
+    */.env/*
+    */tests/*
+    /usr/*
+
+[coverage:report]
+
+
 [extract_messages]
 output_file = src/clacks/agent/locale/messages.pot
 copyright_holder = GONICUS GmbH
