add travis config including coveralls.io support

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 testpaths = src/tests
-addopts = --doctest-modules --cov --cov-report html --cov-report term-missing
+addopts = --doctest-modules --cov=gosa --cov-report html --cov-report term-missing
 python_classes = *TestCase
