--- a/backend/audit.cfg
+++ b/backend/audit.cfg
@@ -1,6 +1,10 @@
 [MESSAGES CONTROL]
 # This currently serves as a workaround due to missing namespace
 # capabilities of pylint.
+# C0103: Invalid %s name "%s"
+# C0301: Line too long (%s/%s)
+# E0611: No name %r in module %r
+# F0401: Unable to import %s
 disable=F0401,E0611,C0103,C0301
 
 [REPORTS]
