--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: python
+sudo: false
 python:
     - "3.5"
 before_install:
-    - pip install gunicorn gevent setproctitle
+    - pip install gunicorn gevent setproctitle pylint
 install:
     - pip install python-coveralls
 script:
