--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
-sudo: false
 python:
     - "3.5"
 before_install:
-    - pip install gunicorn gevent setproctitle
+    - pip install setproctitle pylint
 script:
     - ./setup.py develop
     - ./setup.py test
