--- a/common/pytest.ini
+++ b/common/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 testpaths = src/tests
-addopts = --doctest-modules
+addopts = --doctest-modules --cov=src/gosa --cov-report html --cov-report term-missing
 python_classes = *TestCase
