Move some stuff around

--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -7,21 +7,21 @@ tag_svn_revision = false
 test=pytest
 
 [extract_messages]
-output_file = src/clacks/agent/locale/messages.pot
+output_file = src/gosa/backend/locale/messages.pot
 copyright_holder = GONICUS GmbH
 msgid_bugs_address = gosa@oss.gonicus.de
 keywords = _ ngettext:1,2 N_
 add_comments = TRANSLATOR:
 strip_comments = 1
-input_dirs = src/clacks/agent
+input_dirs = src/gosa/backend
 
 [init_catalog]
-output_dir = src/clacks/agent/locale
-input_file = src/clacks/agent/locale/messages.pot
+output_dir = src/gosa/backend/locale
+input_file = src/gosa/backend/locale/messages.pot
 
 [compile_catalog]
-directory = src/clacks/agent/locale
+directory = src/gosa/backend/locale
 
 [update_catalog]
-output_dir = src/clacks/agent/locale
-input_file = src/clacks/agent/locale/messages.pot
+output_dir = src/gosa/backend/locale
+input_file = src/gosa/backend/locale/messages.pot
