--- a/example/config
+++ b/example/config
@@ -13,6 +13,9 @@ bind-dn = cn=ldapadmin,dc=example,dc=net
 bind-secret = secret
 pool-size = 10
 
+[backend-database]
+database = sqlite:///:memory:
+
 
 ##############################################################################
 #                            Logger configuration                            #
