--- a/backend/src/tests/test.conf/config
+++ b/backend/src/tests/test.conf/config
@@ -42,7 +42,7 @@ handlers=console
 
 [logger_gosa]
 # Desired loglevel: DEBUG, INFO, WARNING, ERROR, CRITICAL
-level=DEBUG
+level=INFO
 # Desired handler: syslog, console
 handlers=console
 qualname=gosa
