--- a/shell/setup.cfg
+++ b/shell/setup.cfg
@@ -3,6 +3,9 @@ tag_build = dev
 tag_date = false
 tag_svn_revision = false
 
+[aliases]
+test=pytest
+
 [extract_messages]
 output_file = src/gosa/shell/locale/messages.pot
 copyright_holder = GONICUS GmbH
