skip tests marked as slow and only run them when --runslow option is set

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
     - python2 generate.py build
     - cd ../../../../
     - ./setup.py develop
-    - ./setup.py test
+    - ./setup.py test --addopts="--runslow"
 
 after_success:
     - coverage combine common/.coverage backend/.coverage shell/.coverage plugins/gui/.coverage # needs to be more generic
