ignore common python stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,31 @@
-.idea
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+build/
+.eggs/
+lib/
+*.egg-info/
+*.egg
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+
+# Translations
+*.mo
+*.pot
+
+# dotenv
 .env
-.eggs
-*.egg-info
-__pycache__
-*.swp
+
+# intellij project
+.idea
