--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "plugins/gui/frontend/qooxdoo"]
 	path = plugins/gui/frontend/qooxdoo
 	url = https://github.com/qooxdoo/qooxdoo
+[submodule "plugins/gui/frontend/capture"]
+	path = plugins/gui/frontend/capture
+	url = git://github.com/cajus/capture.git
+[submodule "plugins/gui/frontend/uploadmgr"]
+	path = plugins/gui/frontend/uploadmgr
+	url = git@github.com:johnspackman/UploadMgr.git
