--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,11 @@ cache:
     - plugins/gui/frontend/gosa/build
 
 before_install:
+    - sudo apt-get install mosquitto
+    - mosquitto -d -c test.conf/mosquitto.conf
     - docker pull cpollmeier/gosa3:devel
     - docker run -d -p 389:389 -p 5433:5432 cpollmeier/gosa3:devel
     - pip install setproctitle pylint tornado coveralls 'pytest>=2.9'
-    - sudo apt-get update
-    - apt-cache search mosquitto
-    - sudo apt-get install mosquitto mosquitto-auth-plugin
-    - mosquitto -d -c test.conf/mosquitto.conf
     - sudo [ $(ip addr show | grep "inet6 ::1" | wc -l) -lt "1" ] && sudo sed -i '/^::1/d' /etc/hosts
     - sudo sed -i '/127.0.1.1/d' /etc/hosts  # Workaround tornadoweb/tornado#1573
     - export TZ=Europe/Berlin
