--- a/test.conf/mosquitto.conf
+++ b/test.conf/mosquitto.conf
@@ -1,6 +1,6 @@
 allow_anonymous false
 
-auth_plugin /usr/lib/mosquitto-auth-plugin/auth-plugin.so
+auth_plugin test.conf/auth-plugin.so
 auth_opt_backends http
 auth_opt_http_ip 127.0.0.1
 auth_opt_http_port 8000
