configure and create workflow dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
     - sudo [ $(ip addr show | grep "inet6 ::1" | wc -l) -lt "1" ] && sudo sed -i '/^::1/d' /etc/hosts
     - sudo sed -i '/127.0.1.1/d' /etc/hosts  # Workaround tornadoweb/tornado#1573
     - export TZ=Europe/Berlin
+    - sudo mkdir /tmp/workflows
 
 script:
     - cd plugins/gui/frontend/gosa/
