--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -153,7 +153,7 @@
 
     "source-script":
     {
-      "include": ["gosa.ui.widgets.*", "gosa.ui.dialogs.*", "gosa.engine.extensions.*"],
+      "include": ["gosa.ui.widgets.*", "gosa.LocalConfig", "gosa.ui.dialogs.*", "gosa.engine.extensions.*"],
 
       "variants" :
       {
