--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
     - sudo killall -9 postgres
     - docker pull cpollmeier/gosa3:devel
     - docker run -d -p 389:389 -p 1883:1883 -p 5432:5432 cpollmeier/gosa3:devel
+    - pip install --upgrade pip
     - pip install setproctitle pylint tornado coveralls 'pytest>=2.9'
     - sudo [ $(ip addr show | grep "inet6 ::1" | wc -l) -lt "1" ] && sudo sed -i '/^::1/d' /etc/hosts
     - sudo sed -i '/127.0.1.1/d' /etc/hosts  # Workaround tornadoweb/tornado#1573
